# Housing-Markets-with-Indifference

./: .gitignore  README.md  extended_ttc.py  main.py  preference_enumerator.py  pyproject.toml  utils.py  verbose_prints.py
HousingMarketTrading/: __init__.py  extended_ttc.py
WeakHousingMarketAlgorithm/: __init__.py  extended_ttc.py  utils.py  verbose_prints.py
WeakHousingMarketAlgorithm/algorithms/ettc/: ettc_verbose_prints.py  extended_ttc.py
WeakHousingMarketAlgorithm/algorithms/tcr_hpo/: tcr_hpo.py
WeakHousingMarketAlgorithms/: __init__.py  utils.py  verbose_prints.py
WeakHousingMarketAlgorithms/algorithms/ettc/: ettc_random_priority.py  extended_ttc.py
WeakHousingMarketAlgorithms/algorithms/plaxton/: plaxton_algo_1.py
WeakHousingMarketAlgorithms/algorithms/tcr_hpo/: tcr_hpo.py
axiom_evaluations/: __init__.py  _path_setup.py  allocation_rules.py  nonbossiness_checker.py  nonbossiness_violations_n3_tcr_hpo.csv  preference_enumerator.py  strategyproofness_checker.py  tcr_hpo_vs_ettc_checker.py
